--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -17,7 +17,8 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Name="MyWindow">
+        Name="MyWindow"
+        Icon="../Images/loginLogo.png">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
