--- a/Views/MainMap.xaml
+++ b/Views/MainMap.xaml
@@ -7,20 +7,132 @@
         mc:Ignorable="d"
         Title="MainMap" Height="800" Width="1400"
         MinHeight="800" MinWidth="1300"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         WindowStartupLocation="CenterScreen"
         xmlns:map ="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
-        Icon="../Images/mapLogo.png">
-    <Grid> <!-- I can use provider binding, works but shows error -->
-        <map:Map Name="RoadMap" CredentialsProvider="Ao_jQSDX1s9uPT2kRQF7n1gALuQymIe2AgPyUVwQUq8i4Sa1m-E1GJrrH995z2ND"
+        Icon="../Images/mapLogo.png"
+        Name="myWindow">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Resources/DictionaryLogin.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <Storyboard x:Key="OpenMenu">
+                <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridMenu">
+                    <EasingDoubleKeyFrame KeyTime="0" Value="70"/>
+                    <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="200"/>
+                </DoubleAnimationUsingKeyFrames>
+            </Storyboard>
+            <Storyboard x:Key="CloseMenu">
+                <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridMenu">
+                    <EasingDoubleKeyFrame KeyTime="0" Value="200"/>
+                    <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="70"/>
+                </DoubleAnimationUsingKeyFrames>
+            </Storyboard>
+
+        </ResourceDictionary>
+
+
+
+       
+        
+        
+      
+    </Window.Resources>
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonOpenMenu">
+            <BeginStoryboard Storyboard="{StaticResource OpenMenu}"/>
+        </EventTrigger>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonCloseMenu">
+            <BeginStoryboard Storyboard="{StaticResource CloseMenu}"/>
+        </EventTrigger>
+    </Window.Triggers>
+    <!-- I can use provider binding, works but shows error -->
+    <!--<map:Map Name="RoadMap" CredentialsProvider="Ao_jQSDX1s9uPT2kRQF7n1gALuQymIe2AgPyUVwQUq8i4Sa1m-E1GJrrH995z2ND"
                  Center="40.409264, 49.867092" ZoomLevel="12" >
 
 
             <Grid>
                 <Button></Button>
             </Grid>
-        </map:Map>
+        </map:Map>-->
 
-        
+    <Grid Background="{StaticResource LoginBackgroundGradient}">
+        <Grid x:Name="GridMain">
+            <ContentControl Content="{Binding GridMainPanelControl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        </Grid>
 
+        <Grid Height="60" VerticalAlignment="Top" Background="#4fe0c6">
+            <Grid.Effect>
+                <DropShadowEffect BlurRadius="1" ShadowDepth="1" Color="#FFACACAC"/>
+            </Grid.Effect>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <!--<TextBlock Text="Help" VerticalAlignment="Center" FontSize="16" Foreground="Black"/>-->
+                <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Margin="10" Foreground="Black">
+                    <StackPanel Width="150">
+                        <Button Content="Settings" Command="{Binding SettingsCommand}" CommandParameter="{Binding ElementName=ListViewMenu}"/>
+                        <Button Content="Account" Command="{Binding AccountCommand}"/>
+                        <Button Content="About" Command="{Binding AboutCommand}"/>
+                        <Separator/>
+                        <Button Content="Logout" Command="{Binding LogOutCommand}"/>
+                    </StackPanel>
+                </materialDesign:PopupBox>
+            </StackPanel>
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Foreground="Black">BABAT TAXI</TextBlock>
+        </Grid>
+
+        <Grid x:Name="GridMenu" Width="70" HorizontalAlignment="Left" Background="#4fe0c6">
+            <Grid.Effect>
+                <DropShadowEffect BlurRadius="2" ShadowDepth="1" Color="#FFAEAEAE"/>
+            </Grid.Effect>
+            <StackPanel>
+                <Grid Height="60" Background="#4fe0c6" RenderTransformOrigin="0.5,0.5" Margin="0,0,0,190">
+                    <Grid.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Grid.RenderTransform>
+                    <Button x:Name="ButtonOpenMenu" Height="60" Width="60" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="1" Foreground="Black" Command="{Binding OpenMenuCommand}" CommandParameter="{Binding ElementName=GridMain}" Visibility="{Binding OpenMenuVisibility}">
+                        <materialDesign:PackIcon Kind="Menu" Width="25" Height="25"/>
+                    </Button>
+                    <Button x:Name="ButtonCloseMenu" Height="60" Width="60" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderThickness="0" BorderBrush="{x:Null}" Foreground="Black" Command="{Binding CloseMenuCommand}" CommandParameter="{Binding ElementName=myWindow}" Visibility="{Binding CloseMenuVisibility}">
+                        <materialDesign:PackIcon Kind="ArrowLeft" Width="25" Height="25"/>
+                    </Button> 
+                </Grid>
+                
+                <ListView x:Name="ListViewMenu" Foreground="Black" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionChanged="ListViewMenu_SelectionChanged">
+                    <ListViewItem x:Name="ItemMap" Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Earth" Height="25" Width="25" Margin="10"/>
+                            <TextBlock Text="Home" VerticalAlignment="Center" Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemHistory" Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="History" Height="25" Width="25" Margin="10"/>
+                            <TextBlock Text="Ride History" VerticalAlignment="Center" Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    
+                    <ListViewItem x:Name="ItemFeedback" Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Feedback" Height="25" Width="25" Margin="10"/>
+                            <TextBlock Text="Feedback" VerticalAlignment="Center"  Margin="20 10"/>
+                        </StackPanel>
+                    </ListViewItem>
+
+                    <ListViewItem Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <Button Visibility="Collapsed" Command="{Binding GetListViewCommand}" CommandParameter="{Binding ElementName=ListViewMenu}"/>
+                           
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
