--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -80,7 +80,7 @@
 
                                 <Button Template="{StaticResource Login_and_SingUp}" Content="LOGIN"
                                    VerticalAlignment="Center" HorizontalAlignment="Center"
-                                   FontSize="30"  FontWeight="Light" Command="{Binding Login_PageCommand}" CommandParameter="{Binding ElementName=MyWindow}"/>
+                                   FontSize="30"  FontWeight="Light" Command="{Binding Login_PageCommand}"/>
 
                                 <Line x:Name="line1" Margin="0,8,0,0" X1="80" Stroke="#4fe0c6"
                               HorizontalAlignment="Center" VerticalAlignment="Top"
