--- a/UserControls/UserControlMap.xaml
+++ b/UserControls/UserControlMap.xaml
@@ -8,42 +8,48 @@
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:map ="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF">
+    <UserControl.Resources>
+        <ControlTemplate x:Key="Start" TargetType="map:Pushpin">
+            <Image Source="../Images/start.png"></Image>
+        </ControlTemplate>
+
+        <Style TargetType="map:Pushpin">
+            <Setter Property="ContentTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <Image Source="../Images/start.png" Width="20" Height="20"></Image>
+                    </DataTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    
+    
     <Grid>
         <!-- I can use provider binding, works but shows error -->
-        <map:Map Name="RoadMap" CredentialsProvider="Ao_jQSDX1s9uPT2kRQF7n1gALuQymIe2AgPyUVwQUq8i4Sa1m-E1GJrrH995z2ND"
+        <map:Map MouseDoubleClick="RoadMap_MouseDoubleClick" Name="RoadMap" CredentialsProvider="Ao_jQSDX1s9uPT2kRQF7n1gALuQymIe2AgPyUVwQUq8i4Sa1m-E1GJrrH995z2ND"
                  Center="40.409264, 49.867092" ZoomLevel="12" >
-            <map:MapItemsControl Name="ControlMap" ItemsSource="{Binding BusInfos}">
-                <map:MapItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <map:Pushpin Location="{Binding MyLocation}">
-
-                            <Image ></Image>
-
-                        </map:Pushpin>
-                        
-
-                    </DataTemplate>
-                </map:MapItemsControl.ItemTemplate>
-            </map:MapItemsControl>
-            
-            
-            
-            
-            
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="7*"/>
-                </Grid.RowDefinitions>
-
-                <TextBox Grid.Row="1" Padding="2,0,0,0"   materialDesign:HintAssist.Hint="From" Text="{Binding EmailboxLogin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  x:Name="txtEmail"  Width="450" Height="40" FontSize="20" 
-                                       BorderBrush="Gray"  Background="White" BorderThickness="2" Foreground="DarkGray"/>
-                <TextBox Grid.Row="2" Padding="2,0,0,0" materialDesign:HintAssist.Hint="To" Text="{Binding EmailboxLogin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  x:Name="txtEmaill"  Width="450" Height="40" FontSize="20" 
-                                       BorderBrush="Gray"  Background="White" BorderThickness="2" Foreground="DarkGray"/>
-
-            </Grid>
         </map:Map>
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+
+            </Grid.ColumnDefinitions>
+            
+            <Button Grid.Row="1" Grid.Column="2" x:Name="Reset"  Height="60" Width="60" Margin="0,0,50,0"  HorizontalAlignment="Right" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"  BorderBrush="DarkGray" BorderThickness="3" Foreground="Black" Click="Reset_Click">
+                <materialDesign:PackIcon Kind="Restart" Height="25" Width="25" Margin="10"/>
+            </Button>
+
+        </Grid>
+
     </Grid>
 </UserControl>
